--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,5 @@ edition = "2021"
 cssparser = "0.34.0"
 clap = { version = "4.5", features = ["derive"] }
 colored = "2"
+ordered-float = "2.8"
 walkdir = "2.5.0"
